# chatspeed

./: .cursorrules  .env.example  .gitattributes  .gitignore  .gitmodules  .prettierrc  .windsurfrules  AGENTS.md  CLAUDE.md  Dockerfile.test  GEMINI.md  Makefile  PLANNING_MODE_DESIGN.md  README.md  README.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  WORKFLOW_SYNC.md  build.bat  claude_dialog.json  copy_highlight_css.py  design.md  dialog.json  index.html  jsconfig.json  latest.json  logoSvg.js  notes.md  package.json  plan.md  pnpm-lock.yaml  progress_summary.md  setup-env.bat  setup-env.ps1  task_plan.md  test_write_file.txt  vcpkg.json  vite.config.js  wasm_sandbox_plan.md  win_build.bat  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json  test_workflow.txt
src-tauri/assets/agents/: default-shell-policy.json
src-tauri/assets/agents/code-browser/: agent.yaml
src-tauri/assets/agents/code-explorer/: agent.yaml  system.md
src-tauri/assets/agents/coding/: agent.yaml  image-recognition.md  planning.md  system.md
src-tauri/assets/agents/final-code-reviewer/: agent.yaml  system.md
src-tauri/assets/agents/marketing/: agent.yaml  planning.md  system.md
src-tauri/assets/agents/programming/: agent.yaml  system.md
src-tauri/assets/scrape/: readability.min.js  scrape_logic copy.js  scrape_logic.js  scrape_logic.min.js  utility.js  utility.min.js
src-tauri/assets/skills/commit/: SKILL.md
src-tauri/assets/skills/help/: SKILL.md
src-tauri/assets/skills/skill-creator/: CHATSPEED_COMPATIBILITY.md  SKILL.md
src-tauri/assets/skills/skill-installer/: SKILL.md
src-tauri/capabilities/: default.json  scraper.json
src-tauri/i18n/: available_language.json  de.yml  en.yml  es.yml  fr.yml  ja.yml  ko.yml  pt.yml  ru.yml  zh-Hans.yml  zh-Hant.yml
src-tauri/icons/: icon.icns
src-tauri/src/: builtin_agents.rs  constants.rs  environment.rs  error.rs  lib.rs  logger.rs  main.rs  shortcut.rs  test.rs  tray.rs  window.rs
src-tauri/src/ai/: error.rs  mod.rs
src-tauri/src/ai/chat/: anthropic.rs  claude.rs  gemini.rs  list_models.rs  mod.rs  openai.rs
src-tauri/src/ai/interaction/: chat_completion.rs  constants.rs  key_rotator.rs  mod.rs
src-tauri/src/ai/network/: client.rs  mod.rs  stream.rs  stream_processor.rs  types.rs
src-tauri/src/ai/traits/: chat.rs  mod.rs  stoppable.rs
src-tauri/src/ai/util/: util.rs
src-tauri/src/ccproxy/: AGENTS.md  CONSTITUTION.md  README.md  README.zh-CN.md  auth.rs  common.rs  connection_monitor.rs  errors.rs  mod.rs  router.rs  router_welcome.html
src-tauri/src/ccproxy/adapter/: error.rs  mod.rs  range_adapter.rs  unified.rs
src-tauri/src/ccproxy/handler/: chat_handler.rs  claude_handler.rs  direct_handler.rs  embedding_handler.rs  gemini_handler.rs  list_models_handler.rs  mod.rs  ollama_extra_handler.rs  openai_handler.rs  request_preprocessor.rs  responses_handler.rs
src-tauri/src/ccproxy/helper/: common.rs  mod.rs  proxy_rotator.rs  proxy_rotator_test.rs  retry.rs  sse.rs  stat_guard.rs  stream_handler.rs  stream_processor.rs  tool_use_xml.rs
src-tauri/src/ccproxy/types/: claude.rs  common.rs  constants.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openai_responses.rs
src-tauri/src/ccproxy/utils/: http.rs  mod.rs  token_estimator.rs
src-tauri/src/commands/: agent.rs  ccproxy.rs  chat.rs  chat_web_search.rs  clipboard.rs  constants.rs  dev_tool.rs  download.rs  env.rs  fs.rs  mcp.rs  message.rs  mod.rs  note.rs  os.rs  proxy_group.rs  sensitive.rs  setting.rs  toolbar.rs  update.rs  updater.rs  window.rs  workflow.rs  workflow_automation.rs
src-tauri/src/commands/types/: workflow.rs
src-tauri/src/db/: agent.rs  api_key_crypto.rs  automation.rs  backup.rs  backup_crypto.rs  ccproxy.rs  chat.rs  config.rs  error.rs  main_store.rs  mcp.rs  mod.rs  note.rs  plugin.rs  proxy_group.rs  types.rs  workflow.rs
src-tauri/src/db/sql/: schema.rs
src-tauri/src/http/: chp.rs  client.rs  crawler.rs  error.rs  mod.rs  server.rs  types.rs
src-tauri/src/http/ccproxy/: errors.rs  handlers.rs  mod.rs  proxy_rotator.rs  router.rs  types.rs
src-tauri/src/libs/: ai_temp.rs  ai_util.rs  dedup.rs  fs.rs  lang.rs  mod.rs  similarity.rs  tsid.rs  util.rs  window.rs  window_channels.rs
src-tauri/src/mcp/: error.rs  mod.rs
src-tauri/src/mcp/client/: core.rs  mod.rs  sse.rs  stdio.rs  streamable_http.rs  types.rs  util.rs
src-tauri/src/mcp/server/: handler.rs  mod.rs  persistent_session.rs  standalone.rs
src-tauri/src/plugins/: error.rs  mod.rs  traits.rs
src-tauri/src/plugins/manager/: factories.rs  mod.rs
src-tauri/src/scraper/: config_loader.rs  engine.rs  init.rs  mod.rs  pool.rs  scraper_config.rs  types.rs  url_helper.rs  webview_wrapper.rs
src-tauri/src/search/: builtin.rs  google.rs  mod.rs  search.rs  serper.rs  tavily.rs
src-tauri/src/sensitive/: error.rs  i18n_support.rs  manager.rs  mod.rs  traits.rs
src-tauri/src/sensitive/filters/: mod.rs
src-tauri/src/tools/: chat_completion.rs  constants.rs  current_timel.rs  error.rs  fs.rs  git_diff.rs  git_inspect.rs  interaction.rs  llm_output.rs  mcp_loader.rs  mod.rs  plot.rs  search.rs  search_dedup.rs  shell.rs  shell_output.rs  skill.rs  time_tool.rs  todo_manager.rs  tool_manager.rs  types.rs  web_crawler.rs  web_fetch.rs  web_scraper.rs  web_search.rs
src-tauri/src/tools/deep_search/: core.rs  mod.rs  prompt.rs
src-tauri/src/tools/helper/: mod.rs  shell_output_reducer.rs  shell_parse.rs
src-tauri/src/updater/: error.rs  manager.rs  mod.rs  types.rs
src-tauri/src/workflow/: config.rs  context.rs  context_resolve.rs  error.rs  function_manager.rs  graph.rs  helper.rs  mod.rs  parser.rs  plugin.rs  todo.md  tool_manager.rs  types.rs
src-tauri/src/workflow/automation/: mod.rs  scheduler.rs  service.rs  types.rs
src-tauri/src/workflow/dag/: config.rs  context.rs  context_resolve.rs  graph.rs  mod.rs  parser.rs  types.rs
src-tauri/src/workflow/engine/: core.rs  engine.rs  mod.rs
src-tauri/src/workflow/executor/: core.rs  dag.rs  mod.rs
src-tauri/src/workflow/react/: ARCHITECTURE.md  CONSTITUTION.md  CONSTITUTION_VALIDATION.md  context.rs  (+36 more)
(+441 files in other folders)
