[package]
name        = "chatspeed"
version     = "1.1.26"
description = "Quickly solve problems with the help of AI"
authors     = ["Ezool Network"]
edition     = "2021"
build       = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name       = "chatspeed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest    = false

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
walkdir     = "2"

[dependencies]
anyhow           = "1.0.99"
aes-gcm          = "0.10"
arboard          = "3.6"
async-stream     = "0.3"
async-trait      = "0.1.89"
axum             = "0.8.4"
base64           = "0.22.1"
bytes            = "1.10.1"
chrono           = { version = "0.4.43", features = ["serde"] }
dashmap          = "6.1.0"
dirs             = "6.0"
fern             = "0.7.1"
futures          = { version = "0.3", features = ["std"] }
futures-util     = "0.3"
scopeguard       = "1.2"
global-hotkey    = "0.7.0"
hex              = "0.4"
http             = "1.3.1"
html-escape      = "0.2.13"
humantime        = "2.3.0"
indexmap         = { version = "2.13.0", features = ["serde"] }
image            = "0.25.9"
is_executable    = "1.0"
jieba-rs         = "0.8.1"
json_value_merge = "2.0.1"
lazy_static      = "1.5"
locale_config    = "0.3.0"
log              = "0.4.29"
lru              = "0.16.3"
memchr           = "2.7.6"
once_cell        = "1.21.3"
parking_lot      = "0.12.5"
phf              = { version = "0.13.1", features = ["macros"] }
regex            = "1.12.2"
sled             = "0.34.7"

rand = "0.9.2"
reqwest = { version = "0.12.8", features = ["json", "blocking", "stream", "multipart", "cookies"] }
rmcp = { version = "0.8.5", features = [
    "client",
    "reqwest",
    "transport-sse-client-reqwest",
    "transport-child-process",
    "transport-sse-server",
    "tower",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }

rusqlite                     = { version = "0.38.0", features = ["bundled", "backup"] }
rust-i18n                    = "3.1.5"
scraper                      = "0.25.0"
seahash                      = "4.1.0"
semver                       = "1.0.27"
serde                        = { version = "1.0.228", features = ["derive"] }
serde_json                   = "1.0.149"
serde_yaml                   = "0.9.34-deprecated"
sha2                         = "0.10.8"
tauri                        = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog          = "2.6.0"
tauri-plugin-fs              = "2.4.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener          = "2.5.3"
tauri-plugin-process         = "2.3.1"
tauri-plugin-shell           = "2.3.4"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-updater         = "2.9.0"
thiserror                    = "2.0.18"
time                         = { version = "0.3.46", features = ["formatting"] }
tinysegmenter                = "0.1.1"
tokio                        = { version = "1.49.0", features = ["full"] }
tokio-stream                 = "0.1.18"
tokio-util                   = "0.7.18"
tower-http                   = { version = "0.6.8", features = ["cors", "fs"] }
unicode-script               = "0.5.8"
unicode-segmentation         = "1.12.0"
url                          = "2.5.8"
uuid                         = { version = "1.20.0", features = ["v4", "v5", "serde"] }
walkdir                      = "2.5.0"
whatlang                     = "0.18.0"
wildmatch                    = "2.6.1"
xxhash-rust                  = { version = "0.8.15", features = ["xxh32"] }
zip                          = "7.2.0"

# uncomment when deno and python runtime is ready
# deno_core                    = { version = "0.331", default-features = false }
# pyo3                         = { version = "0.23.3", features = ["auto-initialize"] }
# v8                           = { version = "130.0.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(unix)'.dependencies]
# Linux/macOS specific dependencies
plist = "1.8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"

[target.'cfg(windows)'.build-dependencies]
vcpkg  = "0.2"
vswhom = "0.1.0"

[dev-dependencies]
tauri      = { version = "2.8.5", features = ["test"] }
tempfile   = "3.20.0"
small_ctor = "0.1.2"
# tauri-driver = "2.0.4"

[profile.dev]
debug            = true
debug-assertions = true
overflow-checks  = true
lto              = false
panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false
