[package]
name        = "chatspeed"
version     = "2.0.2"
description = "Quickly solve problems with the help of AI"
authors     = ["Ezool Network"]
edition     = "2021"
build       = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name       = "chatspeed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest    = false

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }
walkdir     = "2"

[dependencies]
anyhow           = "1.0.102"
aes-gcm          = "0.10"
arboard          = "3.6"
async-trait      = "0.1.89"
axum             = "0.8.9"
base64           = "0.22.1"
bytes            = "1.11.1"
chrono           = { version = "0.4.44", features = ["serde"] }
dashmap          = "6.1.0"
dirs             = "6.0"
fern             = "0.7.1"
futures          = { version = "0.3.32", features = ["std"] }
futures-util     = "0.3.32"
hex              = "0.4"
http             = "1.3.1"
html-escape      = "0.2.13"
indexmap         = { version = "2.14.0", features = ["serde"] }
image            = "0.25.10"
json_value_merge = "2.0.1"
lazy_static      = "1.5"
locale_config    = "0.3.0"
log              = "0.4.29"
lru              = "0.18.0"
memchr           = "2.8.0"
parking_lot      = "0.12.5"
phf              = { version = "0.13.1", features = ["macros"] }
regex            = "1.12.3"
strum            = { version = "0.28.0", features = ["derive"] }

rand = "0.10.1"
reqwest = { version = "0.13.3", features = ["json", "stream", "multipart", "cookies"] }
rmcp = { version = "1.7.0", features = [
    "client",
    "reqwest",
    "transport-child-process",
    "tower",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }

rusqlite                     = { version = "0.39.0", features = ["bundled", "backup"] }
rust-i18n                    = "4.0.0"
scraper                      = "0.25.0"
semver                       = "1.0.28"
serde                        = { version = "1.0.228", features = ["derive"] }
serde_json                   = "1.0.149"
serde_yaml                   = "0.9.34-deprecated"
sha2                         = "0.11.0"
tauri                        = { version = "2.11.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-dialog          = "2.7.1"
tauri-plugin-fs              = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-opener          = "2.5.4"
tauri-plugin-process         = "2.3.1"
tauri-plugin-shell           = "2.3.5"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater         = "2.10.1"
thiserror                    = "2.0.18"
time                         = { version = "0.3.47", features = ["formatting"] }
tokio                        = { version = "1.52.2", features = ["full"] }
tokio-stream                 = "0.1.18"
tower-http                   = { version = "0.6.8", features = ["cors", "fs"] }
url                          = "2.5.8"
uuid                         = { version = "1.23.1", features = ["v4", "v5", "serde"] }
walkdir                      = "2.5.0"
whatlang                     = "0.18.0"
wildmatch                    = "2.6.1"
xxhash-rust                  = { version = "0.8.15", features = ["xxh32"] }
zip                          = "8.6.0"
glob                         = "0.3.3"
shlex                        = "1.3.0"
shellexpand                  = "3.1.0"
ignore                       = "0.4.25"
globset                      = "0.4.18"

# uncomment when deno and python runtime is ready
# deno_core                    = { version = "0.331", default-features = false }
# pyo3                         = { version = "0.23.3", features = ["auto-initialize"] }
# v8                           = { version = "130.0.1", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[target.'cfg(windows)'.build-dependencies]
vcpkg  = "0.2"
vswhom = "0.1.0"

[dev-dependencies]
tauri      = { version = "2.11.0", features = ["test"] }
tempfile   = "3.27.0"
small_ctor = "0.1.2"
# tauri-driver = "2.0.4"

[profile.dev]
debug            = true
debug-assertions = true
overflow-checks  = true
lto              = false
panic            = 'unwind'
incremental      = true
codegen-units    = 256
rpath            = false
